# NCU_Algo_HW

./: CMakeLists.txt
final/: bfs.cpp  dijkstra.cpp  floyd_warshall.cpp  hungarian.cpp  lcs.cpp
hw1/: above_average.cpp  odd_sum_without_prime.cpp  prime_factor.cpp
hw10/: change.cpp  crane_origami.cpp  huffman_code.cpp
hw11/: credit_check.cpp  hamilton.cpp  scarecrow.cpp
hw2/: even_sum.cpp  gcd.cpp  what_is_the_median.cpp
hw3/: add_the_page.cpp  perfect_number.cpp  ugly_numbers.cpp
hw4/: age_sort.cpp  fibonacci.cpp  insertion_sort.cpp
hw5/: euler_function.cpp  product_of_digits.cpp  relational_operators.cpp
hw6/: joana_and_the_odd_numbers.cpp  queen.cpp  quick_sort.cpp
hw7/: bricks.cpp  packets.cpp  peter.cpp
hw8/: all_in_all.cpp  bin_packing.cpp  building.cpp
hw9/: cool_words.cpp  kth_smallest.cpp  lowest_score.cpp
